--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     }
 
 
+
     .text-center{
         text-align: center;
     }
@@ -115,6 +116,9 @@
     .fs-18{
         font-size: 18px;
     }
+    .fs-14{
+        font-size: 14px;
+    }
 
 
     /* buttons */
@@ -151,14 +155,15 @@
 /* section based */
 
 .head_container{
-    /* background-image: url("/assests/bg1.webp"); */
-    /* height: 100vh; */
+    background-image: url("/assests/bg1.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
     position: relative;
 }
-.bg-img{
+/* .bg-img{
     max-width: 100%;
-    height: auto;
-}
+    
+} */
 .inside_head{
 
     position: absolute;
@@ -171,25 +176,30 @@
 .inside_head div{
     margin:30px 0px;
 }
-.mid-head{
-
-}
 .mid-head h2, .mid-head h1, .mid-head h3{
     padding:10px 0px;
 }
 
+.secondary-btn::after{
+    content: ">";
+    padding:0px 10px;
+    font-weight: 400;
+}
+
+
 /* zigzig */
 
 .container{
-    margin:50px 70px;
+    margin:50px 40px;
 }
 .features{
-    margin:10px;
-    padding:40px 5px;
+    margin:5px 0px;
+    padding: 30px 86px;
 }
 .feature_txt{
-    margin:30px;
+    margin:20px 50px;
     font-family: 'Sarabun', sans-serif;
+    /* padding: 15px; */
 
 }
 .pointlist{
@@ -218,13 +228,15 @@
 .loc-item{
     margin:5px 2px;
     font-family: 'IBM Plex Sans', sans-serif;
-}
-.loc-item-wrap h4{
+    padding: 10px 20px;
+    border-radius: 25px;
     border: 2px solid rgba(47, 47, 47, 1);
-    border-radius: 20px;
-    padding:12px;
 }
 
+
+.quarter-circle{
+
+}
 
 /* rent */
 
@@ -249,20 +261,74 @@
 .feat-item {
     padding: 20px 40px;
 }
+.feat-item p{
+    padding:10px 30px 10px 0px ;
+}
 
 
 /* safety */
 
 .safety-response{
-    box-shadow: 0px 0px rgba(70, 83, 158, 0.2);
-    /* padding:50px; */
+    box-shadow: 0px 0px 50px rgba(70, 83, 158, 0.2);
+    padding: 50px 30px;
     
+}
+.safety-head{
+    padding: 30px 40px;
 }
 .safety{
     /* border-right: 1px solid rgba(172, 168, 169, 1); */
     padding: 20px;
 
 }
+.safety-txt >* {
+    padding:5px 0px;
+}
+.bg-big{
+    background-color: rgba(48, 54, 131, 1);
+    position: absolute;
+    padding: 25px;
+    border-radius: 50%;
+    left: 0;
+    top: 16px;
+}
+.bg-sm{
+    background-color: rgba(48, 54, 131, 1);
+    padding: 3.5px;
+    position: absolute;
+    border-radius: 50%;
+    left: 70px;
+    top: 52px;
+}
+.bg-md
+{
+    background-color: rgba(48, 54, 131, 1);
+    position: absolute;
+    padding: 10px;
+    border-radius: 50%;
+    left: 140px;
+    top: 14px;
+}
+.bg-md-1{
+    left:75px;
+    top: 110px;
+}
+
+.quarter-circle{
+    position: absolute;
+    right: 0;
+    height: 78px;
+    width: 64px;
+    background-color: rgba(48, 54, 131, 1);
+    border-top-left-radius: 33px;
+    z-index: -1;
+    top: -1px;
+    border-bottom-left-radius: 50px;
+    border-top-right-radius: 14px;
+    border-bottom-right-radius: 14px;
+}
+
+
 
 
 /* ready */
